# stonks-ai2.0

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  style.css
docs/: API.md  COMANDOS.md  CONFIGURACAO.md  EXEMPLOS.md  INSTALACAO.md  TROUBLESHOOTING.md  adr.md
site/: README.md
site/dashboard/: app.py  config.yaml
site/landing/: script.js
stonks_ai/: __init__.py  config.py  database.py  main.py
stonks_ai/agents/: __init__.py  base_agent.py  financial_agent.py  personal_finance_agent.py
stonks_ai/cli/: __init__.py
stonks_ai/collectors/: __init__.py
stonks_ai/collectors/finance/: __init__.py  base.py  categorizer.py  csv_importer.py  excel_importer.py  pdf_importer.py
stonks_ai/collectors/stocks/: __init__.py  b3.py  base.py  fundamental_data.py  nyse.py
stonks_ai/llm/: __init__.py  base.py  client.py  deepseek_provider.py  factory.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py  prompts.py
stonks_ai/models/: __init__.py  alert.py  category.py  financial_goal.py  stock_history.py  transaction.py  user_preferences.py  watchlist.py
stonks_ai/utils/: __init__.py  charts.py  finance_utils.py  formatters.py  validators.py
tests/: __init__.py  test_agents.py  test_cli.py  test_collectors.py  test_config.py  test_database.py  test_llm.py  test_validators.py
webapp/: __init__.py  app.py  theme.py
webapp/components/: __init__.py  charts.py  metrics.py  sidebar.py
webapp/views/: __init__.py  alerts.py  analyze.py  chat.py  compare.py  config.py  dashboard.py  finance.py  goals.py  history.py  quote.py  watchlist.py
