[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonks-ai"
version = "0.1.0"
description = "Assistente financeiro com IA via CLI - Análise de ações B3/NYSE e finanças pessoais"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Stonks AI Team"},
]
keywords = ["finance", "stocks", "b3", "nyse", "jobs", "cli", "ai", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazil)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "questionary>=2.0",
    "sqlalchemy>=2.0",
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "ollama>=0.1",
    "plotext>=5.2",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "pydantic>=2.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "streamlit>=1.57",
    "plotly>=6.0",
]

[project.scripts]
stonks = "stonks_ai.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.setuptools.packages.find]
include = ["stonks_ai*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
